--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>The Surfing project</title>
 </head>
 <body>
@@ -18,13 +19,13 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                        <a class="nav-link text-decoration-underline" aria-current="page" href="#">Accueil</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="#">Le programme</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Nos prochaines sessions</a>
+                            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Nos prochaines sessions</a>
                         </li>
                     </ul>
                 </div>
@@ -34,15 +35,15 @@
 
 ***************************************** MAIN *****************************************
     <main>
-        <div class="py-5 text-center" style="background-image: url(./surf.png); background-size: cover; height: 50vh">
-            <h1 class="fw-light">Partez a l'aventure</h1>
-            <p class="lead text-body-secondary">
+        <div class="py-5 text-center" style="background-image: url(./suurf.jpg); ; background-size: cover; height: 50vh">
+            <h1 class="fw-light fw-bolder">Partez a l'aventure</h1>
+            <p class="txt1 text-body-secondary text-center fw-bold">
                 Decouvrez notre ecole de surf en peer-learning
             </p>
-            <p>
-                <a class="btn btn-primary my-2" href="#">Je m'inscris a la prochaine session</a>
-                <a class="btn btn-primary my-2" href="#">J'aimerais voir le programme</a>
-            </p>
+            <div class="m-5 py-5">
+            <a class="btn btn-primary" href="#">Je souhaite m'inscrire</a>
+            <a class="btn btn-primary" href="#">Quelques photos &#x1F600;</a>
+            </div>
         </div>
             <div class="text-center fw-light m-3">
                 <h2>The Surfing Project en 3 points</h2>
@@ -50,16 +51,19 @@
 
         <div class="row row-cols-1 row-cols-md-3 mb-3 m-4 text-center">
             <div class="col-12 gx-5 col-md-4">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="60" height="60" x="0" y="0" viewBox="0 0 467.932 467.932" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g transform="matrix(0.6800000000000003,0,0,0.6800000000000003,74.86912109375004,74.86912048339829)"><path d="m0 369.325 155.977 90.055 311.955-180.108-.001-180.667L311.953 8.552 0 189.219z" style="" fill="#2db357" data-original="#2db357" class=""></path><path d="m0 189.219 155.977 90.053L467.931 98.605l.001 180.667L155.977 459.38 0 369.325z" style="" fill="#0e834c" data-original="#0e834c" class=""></path><path d="M155.977 459.38V279.272L467.931 98.605l.001 180.667z" style="" fill="#1a4541" data-original="#1a4541" class=""></path><path d="M311.953 29.17 38.994 185.864l118.412 67.562L430.365 96.735 311.953 29.17zM157.385 238.144l-91.689-52.316L311.975 44.453l91.688 52.316-246.278 141.375z" style="" fill="#ffffff" data-original="#ffffff" class=""></path><ellipse cx="238.466" cy="137.506" rx="51.16" ry="29.05" style="" fill="#ffffff" data-original="#ffffff" class=""></ellipse><ellipse cx="317.636" cy="94.486" rx="22.11" ry="12.553" style="" fill="#5ee1eb" data-original="#5ee1eb"></ellipse><ellipse cx="155.976" cy="186.766" rx="22.11" ry="12.555" style="" fill="#5ee1eb" data-original="#5ee1eb"></ellipse><path d="M0 212.366v4.404l155.966 92.366.011-4.4zM0 236.551v4.405l155.966 92.365.011-4.399zM0 260.737v4.405l155.966 92.367.011-4.4zM0 284.923v4.405l155.966 92.366.011-4.398zM0 309.11v4.405l155.966 92.366.011-4.4zM0 333.296v4.405l155.966 92.365.011-4.399z" style="" fill="#2db357" data-original="#2db357" class=""></path><path d="m467.931 123.763-311.944 180.98-.01 4.388 311.954-180.989zM467.931 147.948 155.987 328.929l-.01 4.387 311.954-180.989zM467.931 172.134 155.987 353.116l-.01 4.388 311.954-180.991zM467.932 196.319 155.987 377.302l-.01 4.387 311.955-180.99zM155.987 401.488l-.01 4.387 311.955-180.988v-4.382zM155.987 425.674l-.01 4.386 311.955-180.988v-4.382z" style="" fill="#0e834c" data-original="#0e834c" class=""></path></g></svg>
                 <p class="fw-bolder fs-5">Pas chere</p>
                 <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque ut eligendi iure suscipit sint accusamus sit dignissimos doloremque laudantium hic, vitae, iusto architecto illum necessitatibus natus laboriosam. Recusandae, ea nemo?</p>
             </div>
             <div class="col-12 gx-5 col-md-4">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="59" height="59" x="0" y="0" viewBox="0 0 68 68" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g transform="matrix(0.8800000000000011,0,0,0.8800000000000011,4.085819149017304,4.083535652160599)"><path d="M62.5 5.2c-5.3-.4-13.7 8.4-12 18.5.1.5.2 1.1.1 1.4-.1.2-.3.4-.4.3s-.2-.4-.3-.6c-1.7-5.1-6.5-10.9-11.4-11.9-2.1-.4-4.2.1-5.5 1.4-1 1-1.7 3-1.5 4.8-3.4-1.4-7.1 1-7.2 4.6-1.4-.4-3.1-.2-4.3.7-2.9-5-5.7-7.1-9.3-13.7-1.4-2.2-3.6-4.4-5.8-3.6-2.9 1.1-3.7 5.5-3 8.4.9 4 3.4 7.4 5.4 10.9C10.5 32 12.4 38.1 15 44c2.5 5.9 5.8 11.7 10.8 15.6 2.9 2.2 6.4 3.8 10 3.8.8 0 1.8-.3 1.7-1.1.4-.5.1-1.3-.6-1.2-3.6.2-7.3-1.4-9.8-4.1l-1-1.1c-2.5-2.8-5.1-5.7-7-9-1.8-3.1-3.1-6.7-4.3-10.1-1.2-3.5-2.5-7.1-4.4-10.4-2.5-4.3-6.2-8.1-7-12.9-.5-4.2 2.6-7.8 5.9-2 3.6 6.4 6.9 9.4 9.6 14.1-.5.9-.7 2.2-.4 3.4.9 3.3 9.3 12.4 11.6 14.9 1 1.1 2.1 2.2 3.5 3s3 1.1 4.4.5c1.8-.7 2.8-3 2.2-4.8.2-.1.3-.1.4-.2 1.4 0 2.7-1.3 2.6-2.7 1.1-.3 2-1.1 2.5-2.2 2.4-3.8-2.4-15-3.9-18.7-.4-.9-1.8-.4-1.4.6 1.8 4.3 3.5 8.5 4.2 13.1-1.4-.7-2.8-.1-3.5 1-1.6-3.1-3.3-6.2-5-9.2-.8-1.3-1.7-2.8-2.8-3.8 0-.1 0-.2-.1-.3-.7-1.1-.3-3.6.7-4.6 1-.9 2.6-1.3 4.2-1 4.3.8 8.7 6.2 10.3 10.9.2.4.4 1.1 1 1.5 1 .5 2.1-.2 2.5-1.2.3-.7.1-1.4 0-2.2C50.3 13.5 59.4 5 63.5 7c-1.6 1.7-4.2 3.5-4.1 6.4 0 1.5 1.1 3 2.7 3.3-2.2 9.9 1.3 21.5-3.8 32.7-2.8 6.1-8.2 10.4-13.7 10.9-.5 0-.8.5-.6 1-.1.3.1.6.7.8.5.2 1.1.2 1.7.2 3.7-.2 7.3-.8 10.8-1.8.5-.1 1.1-.4 1.1-.9.1-.4-.3-.9-.7-1-.6-.2-.6-.1-6.4 1 3.5-2 6.5-5.4 8.5-9.6 6-13.1.4-27.7 5.6-37.8.6-1.2 1.3-2.3 1.1-3.6-.3-2-2.2-3.3-3.9-3.4zM28.3 28.8c2.1 3.1 5.5 7.7 8 10.4-1-.1-1.9.2-2.7 1.5-.7 1.2-.9 2.3-.2 3.5-2.6-1.7-4.9-5-10.3-11-1.6-1.8-4.3-5.2-2.7-7.1 1.4-1.7 5.1-1.4 7.9 2.7zM38.8 38c.6-.6 1.8-.3 2.2.8 0 .1.1.1.1.2-.1.8-.5 1.6-1.2 2.1-.3-.6-.8-1.2-1.2-1.7-.2-.4-.2-1.2.1-1.4zm-.3 4 .2.2v.5c-.1 1.4-.9 2.2-2.1 2.3-.2-.5-.9-.5-1.6-1.3s-.6-1.4-.1-2.2c.6-.9 1.2-1.2 2.1-.5.5.3 1.1.6 1.5 1zm4-7.8c.2-.4.7-.6 1.1-.5.5.1 1.1.5 1.2.9 0 .1.1.2.1.2 0 .6-.1 1.1-.3 1.7-.3.7-1.1 1.3-1.8 1.1h-.2c-.1-.6-.2-1.2-.4-1.8 0-.6.1-1.3.3-1.6zM34.9 25c1.3 2.3 5 8.6 5.9 11.1 0 .2.1.3.1.5-1.4-.7-3.2-.2-3.7 1.3-7.6-8.8-7.5-11.4-11.5-13.5-.3-2.6 2-4.6 4.5-4.1 2.1.5 3.4 2.6 4.7 4.7zm27.6-9.8c-.8-.1-1.5-1-1.5-1.9-.1-2.1 2.2-3.7 3.7-5.3.9 1.6-1 2.7-2.2 7.2z" fill="#000000" data-original="#000000" class=""></path><path d="M35.8 6.4c-.4 0-.7.4-.7.8l.5 3.9c.1 1 1.6.8 1.5-.2L36.6 7c0-.3-.4-.6-.8-.6zM40.9 5.1c-.7 1.5-1.1 3.1-1.4 4.8-.1.4.3.9.7.9 1.2 0 .4-1.3 2-5 .5-1-.9-1.6-1.3-.7zM48.2 5.5l-5 5.9c-.6.8.5 1.7 1.1 1l5-5.9c.3-.3.2-.8-.1-1.1-.3-.2-.7-.2-1 .1z" fill="#000000" data-original="#000000" class=""></path></g></svg>
                 <p class="fw-bolder fs-5">
                         Relax
                 <p>
                 <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque ut eligendi iure suscipit sint accusamus sit dignissimos doloremque laudantium hic, vitae, iusto architecto illum necessitatibus natus laboriosam. Recusandae, ea nemo?</p>
             </div>
             <div class="col-12 gx-5 col-md-4">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="59" height="59" x="0" y="0" viewBox="0 0 682.667 682.667" style="enable-background:new 0 0 512 512" xml:space="preserve"><g transform="matrix(0.8800000000000006,0,0,0.8800000000000006,40.95987522125222,40.96014541625942)"><defs><clipPath id="a" clipPathUnits="userSpaceOnUse"><path d="M0 512h512V0H0Z" fill="#000000" data-original="#000000"></path></clipPath></defs><g clip-path="url(#a)" transform="matrix(1.33333 0 0 -1.33333 0 682.667)"><path d="m0 0-32.707 56.65c-1.834 3.177-.753 7.247 2.423 9.083 11.879 6.868 27.076 2.8 33.936-9.082l5.287-9.158v86.631c0 8.694 7.049 15.743 15.745 15.743 8.695 0 15.744-7.049 15.744-15.743v10.17c0 8.537 6.638 15.808 15.169 16.111 8.957.319 16.319-6.848 16.319-15.734v-10.547c0 8.694 7.048 15.743 15.744 15.743 8.695 0 15.744-7.049 15.744-15.743v-21.035c0 8.695 7.049 15.744 15.744 15.744s15.744-7.049 15.744-15.744V1.351c0-14.551-4.935-27.949-13.223-38.613-5.15-6.626-7.889-14.806-7.89-23.198l-.003-45.856a3.586 3.586 0 0 0-3.585-3.585h-76.55a3.586 3.586 0 0 0-3.586 3.585l-.003 45.865c-.001 8.345-2.675 16.511-7.809 23.089a63.125 63.125 0 0 0-4.198 6.082" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(215.989 141.004)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path><path d="M0 0v49.54" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(319.393 204.553)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path><path d="M0 0v70.574" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(287.904 204.553)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path><path d="M0 0v70.574" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(256.416 204.553)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path><path d="m0 0-42.902-24.77" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(318.925 386.501)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path><path d="m0 0-61.119-35.287" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(334.669 359.231)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path><path d="m0 0-61.119-35.287" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(350.413 331.962)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path><path d="m0 0 42.902-24.77" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(161.587 295.122)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path><path d="m0 0 56.941-32.875" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(177.332 322.392)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path><path d="m0 0 61.119-35.287" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(193.075 349.661)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path><path d="m0 0 5.259 9.109a62.985 62.985 0 0 1 4.809 9.494c3.131 7.735 8.866 14.134 16.091 18.307l39.72 22.935a3.585 3.585 0 0 1 1.311 4.899l-38.274 66.294a3.586 3.586 0 0 1-4.898 1.312l-39.713-22.926c-7.269-4.195-15.723-5.912-24.036-4.765a62.705 62.705 0 0 1-40.051-7.856l-96.768-55.868c-7.53-4.348-10.11-13.977-5.762-21.507 4.347-7.531 13.976-10.111 21.506-5.763l-18.216-10.518c-7.531-4.347-10.111-13.976-5.763-21.506v0c4.348-7.531 13.976-10.11 21.507-5.763l-9.135-5.274c-7.695-4.443-10.221-14.401-5.467-21.999.288-.46.598-.9.925-1.319" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(436.828 348.066)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path><path d="m0 0 60.86 35.138-5.288-9.159c-6.859-11.881-2.784-27.076 9.104-33.93 3.178-1.832 7.242-.734 9.077 2.443l26.075 45.164" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(319.202 277.583)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path><path d="M0 0h-13.503A63.123 63.123 0 0 1-24.13-.582c-8.264-1.157-16.673.61-23.9 4.781L-87.752 27.13a3.586 3.586 0 0 1-4.898-1.313l-38.275-66.294a3.586 3.586 0 0 1 1.313-4.898l39.711-22.93c7.267-4.196 12.982-10.66 16.145-18.433 5.091-12.509 14.227-23.482 26.828-30.757l96.768-55.869c7.53-4.347 17.159-1.767 21.507 5.763 4.347 7.53 1.767 17.159-5.763 21.507L83.8-156.612a15.935 15.935 0 0 1 2.222-1.062" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(138.906 416.447)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path><path d="m0 0-60.86 35.138h10.575c13.72 0 24.841 11.127 24.833 24.848-.002 3.669-2.986 6.64-6.654 6.64h-49.763" style="stroke-width:15;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1" transform="translate(255.774 349.82)" fill="none" stroke="#000000" stroke-width="15" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path></g></g></svg>
                 <p class="fw-bolder fs-5">
                         La communaute
                 </p>
@@ -71,9 +75,9 @@
             <h2>Temoignages</h2>
         </div>
 
-        <div class="row justify-content-center">
+        <div class="row py-5 justify-content-center">
             <!-- <center> -->
-                <div class="col-12 col-md-5">
+                <div class="col-12 col-md-5 w-25">
                     <div class="card shadow">
                         <img src="./sunset.jpg">
                         <div class="card-body">
@@ -85,7 +89,7 @@
                 </div>
             </center>
             <!-- <center> -->
-                <div class="col-12 col-md-5 offset-md-1">
+                <div class="col-12 col-md-5 offset-md-1 w-25">
                     <div class="card shadow">
                         <img src="./van.png">
                             <div class="card-body">
